objects/PEPE_Session_Slots__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Technology_ARCH__c</fullName>
        <description>Field created part of Aug FY16 release</description>
        <label>Primary Sub-Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology_ARCH__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Web Security</fullName>
                </value>
                <value>
                    <fullName>Email Security</fullName>
                </value>
                <value>
                    <fullName>Cloud Web Security</fullName>
                </value>
                <value>
                    <fullName>Cisco ASA with FirePower Services</fullName>
                </value>
                <value>
                    <fullName>Cisco Virtual Adaptive Security Appliance (ASAv)</fullName>
                </value>
                <value>
                    <fullName>Cisco Firepower NGIPS Appliance</fullName>
                </value>
                <value>
                    <fullName>Cisco Identity Services Engine (ISE)</fullName>
                </value>
                <value>
                    <fullName>Cisco TrustSec</fullName>
                </value>
                <value>
                    <fullName>Cisco AnyConnect Secure Mobility Client</fullName>
                </value>
                <value>
                    <fullName>Advanced Malware Protection (AMP)</fullName>
                </value>
                <value>
                    <fullName>AMP + ThreatGrid</fullName>
                </value>
                <value>
                    <fullName>ACI Security Solution</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Defense (CTD)</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Network-as-a-Sensor/Network-as-an-Enforcer (Naas/NaaE)</fullName>
                </value>
                <value>
                    <fullName>Secure Data Center</fullName>
                </value>
                <value>
                    <fullName>Application Centric Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Nexus 9000 Series Switches</fullName>
                </value>
                <value>
                    <fullName>Microsoft Applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Big Data and Analytics</fullName>
                </value>
                <value>
                    <fullName>SAP applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE for Data Center</fullName>
                </value>
                <value>
                    <fullName>UCS Director</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE Enterprise Cloud suite</fullName>
                </value>
                <value>
                    <fullName>Data Center Designs</fullName>
                </value>
                <value>
                    <fullName>Flexpod</fullName>
                </value>
                <value>
                    <fullName>Versastack</fullName>
                </value>
                <value>
                    <fullName>UCS OpenStack</fullName>
                </value>
                <value>
                    <fullName>UCS Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Technology__c</fullName>
        <description>Field created part of Aug FY16 release</description>
        <formula>TEXT(  Training_Event__r.Sub_Technology__c )</formula>
        <label>Sub-Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <description>APJ Jan 2018 Release</description>
        <label>Target Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>PSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_ARCH__c</fullName>
        <description>Technology is selected across each architecture session slot and is allowed to synch with CVENT if needed.</description>
        <label>Primary Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Architecture_ARCH__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat</fullName>
                </value>
                <value>
                    <fullName>Application Experience as a Service (AXaaS)</fullName>
                </value>
                <value>
                    <fullName>BE6000</fullName>
                </value>
                <value>
                    <fullName>BYOD as a Service (BYODaaS)</fullName>
                </value>
                <value>
                    <fullName>CIN</fullName>
                </value>
                <value>
                    <fullName>Cisco Cloud Services or Cisco SaaS</fullName>
                </value>
                <value>
                    <fullName>Cisco Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Cloud Cell Architecture for SAP HANA (SAP HANA)</fullName>
                </value>
                <value>
                    <fullName>Collab Other</fullName>
                </value>
                <value>
                    <fullName>Compute</fullName>
                </value>
                <value>
                    <fullName>Conferencing</fullName>
                </value>
                <value>
                    <fullName>Connected Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Contact Center as a Service based on HCS (HCS_CC)</fullName>
                </value>
                <value>
                    <fullName>Web and Email Security</fullName>
                </value>
                <value>
                    <fullName>Converged Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Network Security and Secure DC</fullName>
                </value>
                <value>
                    <fullName>DC Software</fullName>
                </value>
                <value>
                    <fullName>DC Switching</fullName>
                </value>
                <value>
                    <fullName>Desktop as a Service (DaaS)</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery as a Service (DRaaS)</fullName>
                </value>
                <value>
                    <fullName>Foundation for Software as a Service (FnSaaS)</fullName>
                </value>
                <value>
                    <fullName>Hosted Security as a Service (HSS)</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud (Intercloud Fabric)</fullName>
                </value>
                <value>
                    <fullName>Infrastructure as a Service (IaaS)</fullName>
                </value>
                <value>
                    <fullName>IoT-AS=Advanced Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CCS=Cisco Consulting Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CIE=Connected Industries and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <formula>TEXT( Training_Event__r.Technology__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater_Region__c</fullName>
        <description>Theater region is displayed for each geo.</description>
        <label>Theater Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>ASEAN</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>KOREA</fullName>
                </value>
                <value>
                    <fullName>All Theaters</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>All Theaters-</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Cansac</fullName>
                </value>
                <value>
                    <fullName>MCO</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Latam</fullName>
                </value>
                <value>
                    <fullName>Greater China (GC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater_Super_Regions_Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEAR</fullName>
                    <default>true</default>
                    <label>EMEAR</label>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-12:00) Dateline</fullName>
                </value>
                <value>
                    <fullName>(GMT-11:00) Samoa</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Hawaii</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Alaska</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pacific [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain [Mexico]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Arizona</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Mexico</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central America</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Eastern [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Indiana [East]</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) SA Pacific</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Atlantic [Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Western SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Pacific SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:30) Newfoundland</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Brasilia</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Eastern SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Greenland</fullName>
                </value>
                <value>
                    <fullName>(GMT-02:00) Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>(GMT-01:00) Azores</fullName>
                </value>
                <value>
                    <fullName>(GMT-01:00) Cape Verde</fullName>
                </value>
                <value>
                    <fullName>(GMT) GMT</fullName>
                </value>
                <value>
                    <fullName>(GMT) Greenwich</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Europe Central</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Romance</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Europe Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track 01</fullName>
                </value>
                <value>
                    <fullName>Track 02</fullName>
                </value>
                <value>
                    <fullName>Track 03</fullName>
                </value>
                <value>
                    <fullName>Track 04</fullName>
                </value>
                <value>
                    <fullName>Track 05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Duration_Unit_ARCH__c</fullName>
        <description>Time units are selected across each session slot.</description>
        <label>Training Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Duration_Value_ARCH__c</fullName>
        <description>Time value is selected across each session slot.</description>
        <label>Training Duration Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Event_Id__c</fullName>
        <description>This will provide the Id of the Training Event.</description>
        <formula>Event_Day__r.Training_Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Event Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_Name__c</fullName>
        <description>Training Event Name is updated here</description>
        <label>Training Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_Ownerid__c</fullName>
        <description>Related Parent Training Event OwnerId</description>
        <formula>Training_Event__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Event Ownerid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_Status__c</fullName>
        <formula>TEXT( Event_Day__r.Training_Event__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <description>This provides the lookup for related Training Event.</description>
        <label>Training Event</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
            <errorMessage>Please choose correct PVT, Architecures, Catalogue or SME based session slot RT.</errorMessage>
            <filterItems>
                <field>PEPE_Training_Event__c.Platform__c</field>
                <operation>contains</operation>
                <value>PVT</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>PVT</value>
            </filterItems>
            <filterItems>
                <field>PEPE_Training_Event__c.Platform__c</field>
                <operation>contains</operation>
                <value>PIW</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>PIW, PIW Approved Rejected</value>
            </filterItems>
            <filterItems>
                <field>PEPE_Training_Event__c.Platform__c</field>
                <operation>equals</operation>
                <value>Architectures</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Architecture</value>
            </filterItems>
            <infoMessage>Select desired training event value. Or else it is restricted.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PEPE_Training_Event__c</referenceTo>
        <relationshipLabel>Session Slots</relationshipLabel>
        <relationshipName>Session_Slots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Recommendations__c</fullName>
        <description>This will contain the recommendations for Training.</description>
        <label>Training Recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Type_Architecture__c</fullName>
        <label>Training Type (Architecture)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Business Acumen / Executive Communications</fullName>
                </value>
                <value>
                    <fullName>Sales Excellence</fullName>
                </value>
                <value>
                    <fullName>Soft Skills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>This will provide the type of the training.</description>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Acumen</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Programs, Tools and Incentives</fullName>
                </value>
                <value>
                    <fullName>Sales Excellence</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Soft Skills</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Arrangements__c</fullName>
        <label>Travel Arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WMS_ID__c</fullName>
        <description>APJ 2018 Jan Release</description>
        <label>WMS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebEx_Detaills__c</fullName>
        <description>This will provide the WebEx details.</description>
        <label>WebEx Detaills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WebEx_Panelist_link__c</fullName>
        <description>PIW Session Slots Jan 2018 release for APJ</description>
        <label>WebEx Panelist link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebEx_recording_link__c</fullName>
        <description>Jan 2018 release for APJ</description>
        <label>WebEx recording link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webex_URL__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>WebEx URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Webex_User_or_Configuration__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>WebEx User or Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paolo Sileno</fullName>
                    <default>true</default>
                    <label>Paolo Sileno</label>
                </value>
                <value>
                    <fullName>Tomas Kosan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webex_meeting_number__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>WebEx meeting number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Webex_pwd__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>WebEx pwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Code_ARCH__c</fullName>
        <description>Postal code is entered across each session slot</description>
        <label>ZIP Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <description>This is to create calendar or session slots.</description>
    <label>Session Slots</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Architecture</fullName>
        <active>true</active>
        <description>Architecture based session layouts</description>
        <label>Architecture</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIW</fullName>
        <active>true</active>
        <description>PIW SME based session layouts</description>
        <label>PIW</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIW_Approved_Rejected</fullName>
        <active>true</active>
        <description>This record type would be used when status is either approved or reject</description>
        <label>PIW Approved Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>PVT</fullName>
        <active>true</active>
        <description>PVT based session layouts</description>
        <label>PVT</label>
    </recordTypes>
    <validationRules>
        <fullName>APJ_Request_is_only_for_APJ_event</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; NOT( $User.ProfileId == $Setup.ProfileID__c.Cisco_Deployment_Support__c ) || 
$User.ProfileId = $Setup.ProfileID__c.Cisco_GSTS__c ) &amp;&amp; ( NOT(ISPICKVAL(Theater_Super_Regions_Geography__c, 'APJC')) &amp;&amp; 
ISPICKVAL(Training_Event__r.Geography__c , 'APJC' ) )</errorConditionFormula>
        <errorDisplayField>Theater_Super_Regions_Geography__c</errorDisplayField>
        <errorMessage>EMEAR Request is for EMEAR Events !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arch_SS_are_allowed_only_when_multiple</fullName>
        <active>true</active>
        <description>session slots could be created only when multiple event is created</description>
        <errorConditionFormula>ISPICKVAL(Training_Event__r.Type_of_Architecture_Event__c, 'Standard Sessions Live') ||
 ISPICKVAL(Training_Event__r.Type_of_Architecture_Event__c, 'Standard Sessions Remote') &amp;&amp;
ISNEW()</errorConditionFormula>
        <errorMessage>WARNING! STANDARD Training Events will not allow session slot creations.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EMEAR_Request_is_only_for_EMEAR_event</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; NOT( $User.ProfileId == $Setup.ProfileID__c.Cisco_Deployment_Support__c ) || 
$User.ProfileId = $Setup.ProfileID__c.Cisco_GSTS__c ) &amp;&amp; ( NOT(ISPICKVAL(Theater_Super_Regions_Geography__c, 'EMEAR')) &amp;&amp; 
ISPICKVAL(Training_Event__r.Geography__c , 'EMEAR' ) )</errorConditionFormula>
        <errorDisplayField>Theater_Super_Regions_Geography__c</errorDisplayField>
        <errorMessage>EMEAR Request is for EMEAR Events !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Time_Value_Validation</fullName>
        <active>true</active>
        <description>Checks the End date time validation with TE End date time field</description>
        <errorConditionFormula>IF( 
(DATETIMEVALUE(End_Date_Time__c) &gt; DATETIMEVALUE( Training_Event__r.End_Date_Time__c )) || 

(DATETIMEVALUE(End_Date_Time__c) &lt; DATETIMEVALUE( Training_Event__r.Start_Date_Time__c )), 
true, 
false
)</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>Session End Date Time should be between Training Event Start Date Time and End Date Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_CSAT_Score_Range_0_to_5</fullName>
        <active>true</active>
        <description>Is_CSAT_Score_Range_0_to_5</description>
        <errorConditionFormula>(FLOOR( CSAT_Score__c ) &lt; 0 ||
CEILING( CSAT_Score__c ) &gt; 5) &amp;&amp;
NOT( $User.ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c || 
$User.ProfileId = $Setup.ProfileID__c.Cisco_GSTS__c )</errorConditionFormula>
        <errorDisplayField>CSAT_Score__c</errorDisplayField>
        <errorMessage>Range of CSAT score is 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIVE_only_fields_mandatory</fullName>
        <active>true</active>
        <description>Checks the LIve evnet fields are mandatory for session</description>
        <errorConditionFormula>NOT(ISPICKVAL( $User.PDP_User_Role__c, 'Admin'))&amp;&amp;
(ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Standard Live') ||
 ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Multiple Sessions Live') ) &amp;&amp;
(
 ISPICKVAL(Language__c, '') ||
NOT(ISPICKVAL( Do_you_want__c, '' )) ||
NOT(ISBLANK( Room_Name_ARCH__c ))
)</errorConditionFormula>
        <errorMessage>Training Event Type is LIVE. Please enter Language field below ONLY.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_fields_for_PIW_SME</fullName>
        <active>true</active>
        <description>When PIW SME clicks on Edit then he needs to enter these  mandatory fields : Name of the SMEs, Event Proficiency level, Description, Speakers, PIW track.</description>
        <errorConditionFormula>AND( ISPICKVAL( $User.PDP_User_Role__c ,"SME"),
          OR(RecordType.Name == 'PIW',RecordType.Name == 'PIW Approved Rejected'),
          OR ( 
 
              ISBLANK(  Name_of_the_SMEs__c  ), 
              ISPICKVAL( Event_Proficiency_Level__c ,""),
              ISBLANK(  Description__c   ), 
              ISBLANK(  Speakers__c  ),
              ISPICKVAL( PIW_Track__c ,"") 
            )  
)</errorConditionFormula>
        <errorMessage>SMEs need to fill these mandatory fields (Name of the SMEs, Event Proficiency level, Description, Speakers, PIW track)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_record_can_only_be_created_status</fullName>
        <active>true</active>
        <description>Session slot can start with created status only</description>
        <errorConditionFormula>TEXT( Status__c ) != 'Created' &amp;&amp;
ISNEW() &amp;&amp;
NOT( $User.ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c || 
$User.ProfileId = $Setup.ProfileID__c.Cisco_GSTS__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status can only be CREATED when it is new.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REMOTE_only_fields_mandatory</fullName>
        <active>true</active>
        <description>Checks the REMOTE evnet fields are mandatory for session</description>
        <errorConditionFormula>NOT(ISPICKVAL( $User.PDP_User_Role__c ,'Admin')) &amp;&amp;
(
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Standard Remote') ||
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Multiple Sessions Remote') 
) &amp;&amp;
( 
ISPICKVAL( Do_you_want__c , '') ||
ISBLANK( Room_Name_ARCH__c ) ||
NOT(ISPICKVAL( Language__c, '' ))
)</errorConditionFormula>
        <errorMessage>Training Event Type is REMOTE. Please enter "Do you want TP/WebEx" and "Room Name" ONLY.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retrieve_part_mandatory</fullName>
        <active>true</active>
        <description>Retrieve participants on field mandatory if Auto retrieve participants field selected as Yes</description>
        <errorConditionFormula>AND( OR(RecordType.Name == 'PIW',RecordType.Name == 'PIW Approved Rejected'), 
ISPICKVAL( Auto_retrieve_participants_from_WebEx__c, "Yes" ), 
ISBLANK(Retrieve_participants_on__c) 
)</errorConditionFormula>
        <errorDisplayField>Retrieve_participants_on__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_cannot_be_created_for_Standard_Events</fullName>
        <active>true</active>
        <description>No sessions slots can be created for Standard LIVE or REMOTE events. Except multiple.</description>
        <errorConditionFormula>ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Standard Live') ||
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c, 'Standard Remote')&amp;&amp;
ISPICKVAL( Training_Event__r.Platform__c, 'Architecture' )</errorConditionFormula>
        <errorMessage>You cannot create session slots for STANDARD Training Events.</errorMessage>
    </validationRules>
</CustomObject>